--- a/Ingenio.PortalWebExterno/Views/Home/Contact.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Contact.cshtml
@@ -11,7 +11,6 @@
 
     #formulario {
         background-color: rgba(234, 234, 234, 0.75);
-        margin-top: -10px;
         background-attachment: fixed;
         background-size: cover;
         padding-top: 20px;
@@ -40,8 +39,8 @@
     }
 </style>
 <!--formulario contactenos-->
-<section style="background-image:url(/img/Logos/cofinalFondo.png); margin-bottom: 0px;">
-    <div class="container" style="margin-top: -40px;">
+<section>
+    <div class="container">
         <div class="row">
             <div class="col-md-8">
 
@@ -201,7 +200,7 @@
                                 <div class="form-group">
                                     <textarea id="capta" name="capta" style="height:150px" class="form-control hidden " required></textarea>
                                 </div>
-                                <button type="submit" onclick="darclick();" class="btn btn-template-main"><i class="fa fa-envelope-o"></i> Enviar Mensaje</button>
+                                <button type="submit" onclick="darclick();" class="myButtons"><i class="fa fa-envelope-o"></i> Enviar Mensaje</button>
 
                             </div>
                         </div>
