--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -168,10 +168,10 @@
 
 
 <section class="container__multi">
-    <div class="container__header_multi">
+    @*<div class="container__header_multi">
         <h3>Portal Transaccional</h3>
         <p>Realice transacciones de forma facil y segura</p>
-    </div>
+    </div>*@
     <div class="container__main__multi">
             <h2>Persona Natural</h2>
         <div class="big__container__multi">
