--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -1834,7 +1834,7 @@ i {
   display: flex;
   position: relative; }
   .imagen_directorio img {
-    margin: 10px;
+    margin: 10px 0px;
     width: 100%;
     height: auto;
     object-fit: contain;
@@ -2162,6 +2162,19 @@ i {
 .container_navbar {
   /*max-width:1400px;*/
   margin: auto; }
+
+.nav_referencia {
+  background: rgba(252, 132, 4, 0.1);
+  padding: 20px;
+  color: rgba(252, 132, 4, 0.9); }
+  .nav_referencia .titulo_nav {
+    max-width: 1400px;
+    margin: auto; }
+  .nav_referencia a {
+    /*text-decoration: none;*/
+    color: rgba(252, 132, 4, 0.9); }
+    .nav_referencia a:hover {
+      color: rgba(252, 132, 4, 0.9); }
 
 .modal_container {
   padding: 0;
