--- a/Ingenio.PortalWebExterno/Content/sass/pages/_directorio.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_directorio.scss
@@ -114,7 +114,7 @@
     position: relative;
 
     img {
-        margin:10px;
+        margin:10px 0px;
         width: 100%;
         height: auto;
         object-fit: contain;
