--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Details.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Solicitud de Crédito";
     ViewBag.titulo = "Solicitud de Crédito";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "afiliacion";
+    ViewBag.activo = "Afiliacion";
 
 }
 @model Ingenio.BO.asociados
