--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Cofinal con Sentido Social";
     ViewBag.titulo = "Formularios de Afiliación";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "afiliacion";
+    ViewBag.activo = "Afiliacion";
 
 }
 @{
