--- a/Ingenio.PortalWebExterno/Views/Home/ActualizacionDatos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ActualizacionDatos.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Actualizacion de Datos";
     ViewBag.titulo = "Actualizacion de Datos";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "Actualizacion de Datos";
+    ViewBag.activo = null;
 }
 
 <!DOCTYPE html>
