--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Nuestro Ahorros";
     ViewBag.titulo = "Opciones de Ahorro";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "productos";
+    ViewBag.activo = "Portafolio";
 
 }
 <style>
