--- a/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Canales de Pago";
     ViewBag.titulo = "Canales de Pago";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "CanalesPago";
+    ViewBag.activo = "Portafolio";
 }
 
 <!-- Slick libreria para hacer los slider de imagenes -->
