--- a/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
@@ -2,7 +2,8 @@
     ViewBag.Title = "Concepto de interes";
     ViewBag.titulo = "Conceptos de Interes";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "conoscanosActivo";
+    //ViewBag.activo = "conoscanosActivo";
+    ViewBag.activo = "Conózcanos";
 }
 
 @*<script type="text/javascript">
