--- a/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Convenios";
     ViewBag.titulo = "Convenios";
     ViewBag.url = Url.Action("index", "home");
-
+    ViewBag.activo = "Portafolio";
 
 }
 <style>
