--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Nuestros créditos";
     ViewBag.titulo = "Nuestros Créditos";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "productos";
+    ViewBag.activo = "Portafolio";
 
 }
 
