--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Multiportal";
     ViewBag.titulo = "Multiportal Transaccional";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "Multiportal";
+    ViewBag.activo = null;
 
 }
 
