--- a/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
@@ -2,7 +2,8 @@
     ViewBag.Title = "Nuestras Agencias";
     ViewBag.titulo = "Nuestras Agencias";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "conoscanosActivo";
+    //ViewBag.activo = "conoscanosActivo";
+    ViewBag.activo = "Conózcanos";
 }
 
 <script type="text/javascript">
