--- a/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
@@ -3,7 +3,8 @@
     ViewBag.Title = "Quienes Somos";
     ViewBag.titulo = "Nuestra Cooperativa";
     ViewBag.url = Url.Action("index", "home");
-    ViewBag.activo = "conoscanosActivo";
+    //ViewBag.activo = "conoscanosActivo";
+    ViewBag.activo = "Conózcanos";
 
 }
 <!-- estilo contenido -->
