--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -236,8 +236,8 @@ i {
     margin-left: auto;
 }*/
 .container_prin {
-  max-width: 1200px;
-  margin: 0 auto 30px; }
+  max-width: 1400px;
+  margin: 0 auto; }
   .container_prin a {
     text-decoration: none; }
     .container_prin a:hover, .container_prin a:focus {
@@ -510,15 +510,38 @@ content-video > myButtons:hover {
   width: 25vh;
   height: 25vh; }
 
+.slick-list {
+  margin: auto;
+  max-width: 80%;
+  /*   @media screen and (max-width:400px ) {
+        max-width: 290px;
+    }
+
+    @media screen and (max-width:800px ) {
+        max-width: 350px;
+    }
+
+    @media screen and (max-width:1000px ) {
+        max-width: 450px;
+    }*/ }
+
 .slick-next,
 .slick-prev {
   z-index: 5; }
 
 .slick-next {
   right: 15px; }
+  @media screen and (max-width: 400px) {
+    .slick-next {
+      right: 130px;
+      top: 540px; } }
 
 .slick-prev {
   left: 15px; }
+  @media screen and (max-width: 400px) {
+    .slick-prev {
+      left: 90px;
+      top: 540px; } }
 
 .slick-next:before,
 .slick-prev:before {
@@ -578,7 +601,7 @@ content-video > myButtons:hover {
   /*  border: 3px solid #fb7601;*/
   border-radius: 50%;
   padding: 20px;
-  margin: 30px;
+  margin: 18px;
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -586,7 +609,9 @@ content-video > myButtons:hover {
 .tarjetas-contenedor {
   display: flex;
   flex-direction: row;
-  align-items: center; }
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center; }
 
 .tarjetas-Centradas > i {
   font-size: 3.5em;
@@ -664,8 +689,6 @@ content-video > myButtons:hover {
   .content-video > h3,
   .content-video > p {
     display: none; }
-  .tarjetas-contenedor {
-    flex-direction: column; }
   .contenedor > .botones {
     display: flex;
     flex-direction: column;
@@ -709,6 +732,62 @@ content-video > myButtons:hover {
     width: 50vh; } }
 
 /* Fin de Cambios Actualizados*/
+/*.big_Noticias{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}*/
+.noticias {
+  background-color: rgba(252, 132, 4, 0.1); }
+  .noticias .container__Noticias {
+    max-width: 1400px;
+    margin: auto; }
+    @media screen and (max-width: 400px) {
+      .noticias .container__Noticias {
+        max-width: 350px; } }
+    .noticias .container__Noticias .wrapper_2 {
+      width: 100%;
+      padding-right: 15px;
+      padding-left: 15px;
+      margin-right: auto;
+      margin-left: auto; }
+      .noticias .container__Noticias .wrapper_2 .slick-next {
+        right: 40px; }
+        .noticias .container__Noticias .wrapper_2 .slick-next:before {
+          color: rgba(252, 132, 4, 0.9);
+          font-size: 30px;
+          padding: 5px; }
+        @media screen and (max-width: 400px) {
+          .noticias .container__Noticias .wrapper_2 .slick-next {
+            right: 130px;
+            top: 540px; } }
+      .noticias .container__Noticias .wrapper_2 .slick-prev {
+        /*left: 40px;*/ }
+        .noticias .container__Noticias .wrapper_2 .slick-prev:before {
+          color: rgba(252, 132, 4, 0.9);
+          font-size: 30px;
+          padding: 5px; }
+      @media screen and (max-width: 400px) {
+        .noticias .container__Noticias .wrapper_2 {
+          left: 90px;
+          top: 540px; } }
+    .noticias .container__Noticias .noticas_subcontainer {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      border: 1px solid red;
+      margin: 10px;
+      height: 450px; }
+      .noticias .container__Noticias .noticas_subcontainer .img_notica {
+        width: 100%;
+        height: 130px;
+        background-color: red; }
+        .noticias .container__Noticias .noticas_subcontainer .img_notica .img-contenedor-noticia {
+          width: 100%;
+          height: 100%;
+          object-fit: cover; }
+
 /*$primary-color: rgba(224, 85, 20, 0.75);*/
 /*$primary-color: rgba(252,187,43,1);*/
 /* FUNCION DE GIRAR*/
