--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -18,8 +18,8 @@
 }*/
 
 .container_prin {
-    max-width: 1200px;
-    margin: 0 auto 30px;
+    max-width: 1400px;
+    margin: 0 auto;
 
     a {
         text-decoration: none;
@@ -363,6 +363,24 @@ content-video > myButtons:hover {
     height: 25vh;
 }
 
+.slick-list {
+    margin: auto;
+    max-width: 80%;
+
+ /*   @media screen and (max-width:400px ) {
+        max-width: 290px;
+    }
+
+    @media screen and (max-width:800px ) {
+        max-width: 350px;
+    }
+
+    @media screen and (max-width:1000px ) {
+        max-width: 450px;
+    }*/
+}
+
+
 .slick-next,
 .slick-prev {
     z-index: 5;
@@ -370,10 +388,20 @@ content-video > myButtons:hover {
 
 .slick-next {
     right: 15px;
+
+    @media screen and (max-width:400px ) {
+        right: 130px;
+        top: 540px;
+    }
 }
 
 .slick-prev {
     left: 15px;
+
+    @media screen and (max-width:400px ) {
+        left: 90px;
+        top: 540px;
+    }
 }
 
 .slick-next:before,
@@ -453,7 +481,7 @@ content-video > myButtons:hover {
     /*  border: 3px solid #fb7601;*/
     border-radius: 50%;
     padding: 20px;
-    margin: 30px;
+    margin: 18px; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -463,6 +491,8 @@ content-video > myButtons:hover {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .tarjetas-Centradas > i {
@@ -559,10 +589,6 @@ content-video > myButtons:hover {
         display: none;
     }
 
-    .tarjetas-contenedor {
-        flex-direction: column;
-    }
-
     .contenedor > .botones {
         display: flex;
         flex-direction: column;
@@ -628,3 +654,85 @@ content-video > myButtons:hover {
 }
 
 /* Fin de Cambios Actualizados*/
+
+/*.big_Noticias{
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}*/
+
+.noticias {
+    background-color: $primary-color-light;
+
+    .container__Noticias {
+        max-width: 1400px;
+        margin: auto;
+
+        @media screen and (max-width:400px ) {
+            max-width: 350px;
+        }
+
+
+        .wrapper_2 {
+            width: 100%;
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+
+            .slick-next {
+                right: 40px;
+
+                &:before {
+                    color: rgba(252,132,4,.9);
+                    font-size: 30px;
+                    padding: 5px;
+                }
+
+
+                @media screen and (max-width:400px ) {
+                    right: 130px;
+                    top: 540px;
+                }
+            }
+
+            .slick-prev {
+                /*left: 40px;*/
+
+                &:before {
+                    color: rgba(252,132,4,.9);
+                    font-size: 30px;
+                    padding: 5px;
+                }
+            }
+
+            @media screen and (max-width:400px ) {
+                left: 90px;
+                top: 540px;
+            }
+        }
+
+
+        .noticas_subcontainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            border: 1px solid red;
+            margin: 10px;
+            height: 450px;
+
+            .img_notica {
+                width: 100%;
+                height: 130px;
+                background-color: red;
+
+                .img-contenedor-noticia {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+}
