--- a/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
@@ -21,8 +21,10 @@
 <!-- imagen fondo1-->
 @*<div class="parallaxbox" id="pb0" style="background-image: url('/img/fondos/Nuestra Coop.jpg');"> </div>*@
 <!-- contenido-->
-<section class="imagen_directorio"> 
-    <img src="~/img/Img_Web2/somos.png" alt="Numero principal: 7366087" />
+<section class="imagen_directorio">
+    <img class="img_desk" src="~/img/Img_Web2/somos.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/somos2.png" alt="Numero principal: 7366087" />
+
 </section>
 <section class="contenido">
     <div class="container" style="background-color: rgba(255, 255, 255, 0.8); ">
