--- a/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Navbar.cshtml
@@ -59,7 +59,7 @@
                     <div class="navbar-header">
                         <a class="navbar-brand home" href="~/Home/index">
                             <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="hidden-xs hidden-sm hidden-md" style="margin: -0.4em;width:90%; ">
-                            <img src="~/img/Img_Web2/logo_mini.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em;width:60px; "><span class="sr-only">Cofinal</span>
+                            <img src="~/img/LOGO_COFINAL_small.png" alt="Cofinal" class="visible-sm visible-md" style="margin-top: -0.4em;width:80px; "><span class="sr-only">Cofinal</span>
 
                             <img src="~/img/LOGO_COFINAl.png" alt="Cofinal" class="visible-xs  img-responsive" style="margin-top: -0.4em; width: 250px;"><span class="sr-only">Cofinal</span>
                         </a>
