--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -38,8 +38,20 @@
 
 
 .servicios {
-    background: $primary-color-light;
+    background-color: $primary-color-light;
+    background-image: url("../../../img/Img_Web2/Fondo6.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center right;
+    /*background-position: 0% 0%;*/
     padding: 30px;
+    margin: 0;
+
+    @media screen and (max-width:900px ) {
+        background-image: url("../../../img/Img_Web2/fondo_svg.svg");
+        background-size: cover;
+    }
+
 
     .circle_cards {
         display: flex;
@@ -55,9 +67,9 @@
             flex-wrap: wrap;
 
             p {
-                width:50%;  
-                color:$secondary-color;
-                font-size:24px;
+                width: 50%;
+                color: $secondary-color;
+                font-size: 24px;
             }
         }
 
@@ -689,6 +701,84 @@
     justify-content:center;
 }*/
 
+.inicio_img {
+    background-color: #fff;
+    background-image: url("../../../img/Img_Web2/Fondo4.png");
+    background-size: cover;
+    background-position: 45% 75%;
+    /*background-position: bottom 50px right 100px;*/
+    padding: 30px;
+    margin: 0;
+
+    .container__img {
+        max-width: 1400px;
+        margin: auto;
+
+        @media screen and (max-width:400px ) {
+            max-width: 350px;
+        }
+
+        .wrapper_2 {
+            width: 100%;
+            padding-right: 15px;
+            padding-left: 15px;
+            margin-right: auto;
+            margin-left: auto;
+
+            .slick-next {
+                right: 40px;
+
+                &:before {
+                    color: rgba(252,132,4,.9);
+                    /*font-size: 30px;*/
+                    /*padding: 5px;*/
+                }
+
+
+                @media screen and (max-width:400px ) {
+                    /*right: 130px;*/
+                    top: 310px;
+                }
+            }
+
+            .slick-prev {
+                /*left: 40px;*/
+
+                &:before {
+                    color: rgba(252,132,4,.9);
+                    font-size: 30px;
+                    padding: 5px;
+                }
+
+                @media screen and (max-width:400px ) {
+                    top: 310px;
+                    left: 4px;
+                }
+            }
+        }
+
+        .noticas_subcontainer {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            /*border: 1px solid red;*/
+            margin: 10px;
+
+            .img_subcontainer {
+                /*border: 1px solid red;*/
+
+                .img-contenedor-inicio {
+                    width: 400px;
+                    height: 224px;
+                    object-fit: contain;
+                    z-index: 100;
+                }
+            }
+        }
+    }
+}
+
 .noticias {
     background-color: $primary-color-light;
 
@@ -747,25 +837,79 @@
 
 
         .noticas_subcontainer {
+            position: relative;
             display: flex;
             justify-content: center;
             align-items: center;
             flex-direction: column;
             border: 1px solid red;
             margin: 10px;
-            height: 450px;
+            height: auto;
+            max-height: 450px;
+            background-color: #fff;
 
             .img_notica {
                 width: 100%;
-                height: 130px;
+                height: 230px;
                 background-color: red;
+                overflow: hidden;
 
                 .img-contenedor-noticia {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
+
             }
+
+            .titulo_noticia {
+                margin: 20px;
+                color: black;
+
+                p {
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+            }
+
+            .footer_noticia {
+                margin: 20px;
+            }
+
+            .noticia_fecha {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                width: 60px;
+                height: 60px;
+                background-color: $primary-color;
+                border-radius: 50%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+
+                span {
+                    color: white;
+                }
+            }
+        }
+    }
+}
+
+.container__Video {
+    max-width: 600px;
+    height: 500px;
+    margin: auto;
+
+    .my-slider-videos {
+
+        .tam_video {
+            /*max-height: 500px;*/
+            height: 400px;
         }
     }
 }
